Fixed map height on mobile to show attribution

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -90,10 +90,7 @@ main {
 /* Mobile device styling */
 @media screen and (max-width: 576px) {
   #mapid {
-    position: fixed;
-    top: 86px;
     left: 0;
-    height: 90vh;
     width: 100vw;
   }
 }
